[package]
edition = "2018"
name = "ndsz-fat"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Ndsz
ndsz-bytes = {path = "../ndsz-bytes"}
ndsz-util = {path = "../ndsz-util"}

# Bytes
byteorder = "1.4.3"

# Util
itertools = "0.10.3"

# Error handling
thiserror = "1.0.32"

# Logging
tracing = "0.1.36"

# Serde
serde = {version = "1.0.143", features = ["derive"]}
