[package]
edition = "2018"
name = "ndsz-generic-header"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Ndsz
ndsz-bytes = {path = "../ndsz-bytes"}

# Bytes
byteorder = "1.4.3"

# Util

# Error handling
thiserror = "1.0.32"

# Logging
tracing = "0.1.36"

# Serde
serde = {version = "1.0.143", features = ["derive"]}
