[package]
edition = "2018"
name = "ndsz-narc"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Ndsz
ndsz-fat = {path = "../ndsz-fat"}

# Bytes
byteorder = "1.4.3"

# Util
itertools = "0.10.3"
zutil = {git = "https://github.com/Zenithsiz/zutil", rev = "2a029369ac5aa4e7dbd6f6afb78ae419ee18666f"}

# Error handling
thiserror = "1.0.32"

# Logging
log = "0.4.17"

# Serde
serde = {version = "1.0.143", features = ["derive"]}
