[package]
edition = "2018"
name = "ndsz-nds"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Ndsz
ndsz-bytes = {path = "../ndsz-bytes"}
ndsz-util = {path = "../ndsz-util"}

# Bytes
byteorder = "1.4.3"

# Util
zutil = {git = "https://github.com/Zenithsiz/zutil", rev = "2a029369ac5aa4e7dbd6f6afb78ae419ee18666f"}

# Error handling
thiserror = "1.0.28"

# Logging
tracing = "0.1.36"

# Serde
serde = {version = "1.0.130", features = ["derive"]}
