[package]
edition = "2018"
name = "ndsz-nds"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Ndsz
ndsz-bytes = {path = "../ndsz-bytes"}
ndsz-util = {path = "../ndsz-util"}

# Bytes
byteorder = "1.4.3"

# Util

# Error handling
thiserror = "1.0.28"

# Logging
tracing = "0.1.36"

# Serde
serde = {version = "1.0.130", features = ["derive"]}
