[package]
edition = "2018"
name = "ndsz-unnds"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Ndsz
ndsz-fat = {path = "../ndsz-fat"}
ndsz-nds = {path = "../ndsz-nds"}
ndsz-util = {path = "../ndsz-util"}

# Cmd
clap = {version = "3.2.17", features = ["derive"]}

# Util

# Error handling
anyhow = "1.0.62"

# Logging
tracing = "0.1.36"
tracing-subscriber = {version = "0.3.15", features = ["env-filter"]}

# Serde
serde = {version = "1.0.145", features = ["derive"]}
serde_yaml = "0.9.9"
